<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details_default_word"
            style="@style/card_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:maxLines="1"
            tools:text="Default Word"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/details_translation"
            style="@style/card_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:maxLines="2"
            tools:text="Translation"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textColor="#9c9c9c"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/details_details"
            style="@style/card_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:maxLines="1"
            tools:text="details"
            android:textColor="#1bbf2e"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/google_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_google_grey600_24dp" />

            <ImageButton
                android:id="@+id/wiki_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/abby_lingvo_24dp" />


        </LinearLayout>

        <TextView
            android:id="@+id/details_selection_desc"
            style="@style/section_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/details_desc"
            style="@style/card_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:maxLines="2"
            tools:text="D"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textColor="#9c9c9c"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/details_selection_examples"
            style="@style/section_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/examples" />

        <TextView
            android:id="@+id/details_examples"
            style="@style/card_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:maxLines="2"
            tools:text="E"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textColor="#9c9c9c"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/details_selection_collocations"
            style="@style/section_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/collocations" />

        <TextView
            android:id="@+id/details_collocations"
            style="@style/card_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:maxLines="2"
            tools:text="C"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textColor="#9c9c9c"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>